force-app/main/default/objects/MDGAccount__c/MDGAccount__c.object-meta.xml
<CustomObject>
    <label>MDG Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDG Account</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>