force-app/main/default/objects/MDGAccount__c/fields/ANTLF__c.field-meta.xml
<CustomField>
    <fullName>ANTLF__c</fullName>
    <label>ANTLF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>