force-app/main/default/objects/MDGAccount__c/fields/AUFSD__c.field-meta.xml
<CustomField>
    <fullName>AUFSD__c</fullName>
    <label>AUFSD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>