force-app/main/default/objects/MDGAccount__c/fields/AWAHR__c.field-meta.xml
<CustomField>
    <fullName>AWAHR__c</fullName>
    <label>AWAHR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>