force-app/main/default/objects/MDGAccount__c/fields/BP_HEADER__c.field-meta.xml
<CustomField>
    <fullName>BP_HEADER__c</fullName>
    <label>BP_HEADER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>