force-app/main/default/objects/MDGAccount__c/fields/BZIRK__c.field-meta.xml
<CustomField>
    <fullName>BZIRK__c</fullName>
    <label>BZIRK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>