force-app/main/default/objects/MDGAccount__c/fields/CITY1__c.field-meta.xml
<CustomField>
    <fullName>CITY1__c</fullName>
    <label>CITY1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>