force-app/main/default/objects/MDGAccount__c/fields/CITY2__c.field-meta.xml
<CustomField>
    <fullName>CITY2__c</fullName>
    <label>CITY2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>