force-app/main/default/objects/MDGAccount__c/fields/FAKSD__c.field-meta.xml
<CustomField>
    <fullName>FAKSD__c</fullName>
    <label>FAKSD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>