force-app/main/default/objects/MDGAccount__c/fields/FAX_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>FAX_NUMBER__c</fullName>
    <label>FAX_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>