force-app/main/default/objects/MDGAccount__c/fields/INCO1__c.field-meta.xml
<CustomField>
    <fullName>INCO1__c</fullName>
    <label>INCO1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>