force-app/main/default/objects/MDGAccount__c/fields/INCO2__c.field-meta.xml
<CustomField>
    <fullName>INCO2__c</fullName>
    <label>INCO2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>