force-app/main/default/objects/MDGAccount__c/fields/IsBatch__c.field-meta.xml
<CustomField>
    <fullName>IsBatch__c</fullName>
    <label>IsBatch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>