force-app/main/default/objects/MDGAccount__c/fields/KALKS__c.field-meta.xml
<CustomField>
    <fullName>KALKS__c</fullName>
    <label>KALKS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>