force-app/main/default/objects/MDGAccount__c/fields/KDGRP__c.field-meta.xml
<CustomField>
    <fullName>KDGRP__c</fullName>
    <label>KDGRP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>