force-app/main/default/objects/MDGAccount__c/fields/KONDA__c.field-meta.xml
<CustomField>
    <fullName>KONDA__c</fullName>
    <label>KONDA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>