force-app/main/default/objects/MDGAccount__c/fields/KTGRD__c.field-meta.xml
<CustomField>
    <fullName>KTGRD__c</fullName>
    <label>KTGRD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>