force-app/main/default/objects/MDGAccount__c/fields/KTOKD__c.field-meta.xml
<CustomField>
    <fullName>KTOKD__c</fullName>
    <label>KTOKD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>