force-app/main/default/objects/MDGAccount__c/fields/KUNNR__c.field-meta.xml
<CustomField>
    <fullName>KUNNR__c</fullName>
    <label>KUNNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>