force-app/main/default/objects/MDGAccount__c/fields/KURST__c.field-meta.xml
<CustomField>
    <fullName>KURST__c</fullName>
    <label>KURST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>