force-app/main/default/objects/MDGAccount__c/fields/KZAZU__c.field-meta.xml
<CustomField>
    <fullName>KZAZU__c</fullName>
    <label>KZAZU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>