force-app/main/default/objects/MDGAccount__c/fields/LAND1__c.field-meta.xml
<CustomField>
    <fullName>LAND1__c</fullName>
    <label>LAND1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>