force-app/main/default/objects/MDGAccount__c/fields/LIFSD__c.field-meta.xml
<CustomField>
    <fullName>LIFSD__c</fullName>
    <label>LIFSD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>