force-app/main/default/objects/MDGAccount__c/fields/LOEVM__c.field-meta.xml
<CustomField>
    <fullName>LOEVM__c</fullName>
    <label>LOEVM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>