force-app/main/default/objects/MDGAccount__c/fields/LPRIO__c.field-meta.xml
<CustomField>
    <fullName>LPRIO__c</fullName>
    <label>LPRIO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>