force-app/main/default/objects/MDGAccount__c/fields/MDG_INFO__c.field-meta.xml
<CustomField>
    <fullName>MDG_INFO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDG_INFO</label>
    <type>Checkbox</type>
</CustomField>