force-app/main/default/objects/MDGAccount__c/fields/mLOEVM__c.field-meta.xml
<CustomField>
    <fullName>mLOEVM__c</fullName>
    <label>mLOEVM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>