force-app/main/default/objects/MDGAccount__c/fields/NAME1__c.field-meta.xml
<CustomField>
    <fullName>NAME1__c</fullName>
    <label>NAME1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>