force-app/main/default/objects/MDGAccount__c/fields/PLTYP__c.field-meta.xml
<CustomField>
    <fullName>PLTYP__c</fullName>
    <label>PLTYP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>