force-app/main/default/objects/MDGAccount__c/fields/REGION__c.field-meta.xml
<CustomField>
    <fullName>REGION__c</fullName>
    <label>REGION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>