force-app/main/default/objects/MDGAccount__c/fields/SPART__c.field-meta.xml
<CustomField>
    <fullName>SPART__c</fullName>
    <label>SPART</label>
    <length>255</length>
    <type>Text</type>
</CustomField>