force-app/main/default/objects/MDGAccount__c/fields/STCD1__c.field-meta.xml
<CustomField>
    <fullName>STCD1__c</fullName>
    <label>STCD1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>