force-app/main/default/objects/MDGAccount__c/fields/STCD2__c.field-meta.xml
<CustomField>
    <fullName>STCD2__c</fullName>
    <label>STCD2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>