force-app/main/default/objects/MDGAccount__c/fields/STCD3__c.field-meta.xml
<CustomField>
    <fullName>STCD3__c</fullName>
    <label>STCD3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>