force-app/main/default/objects/MDGAccount__c/fields/TEL_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>TEL_NUMBER__c</fullName>
    <label>TEL_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>