force-app/main/default/objects/MDGAccount__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>dummy object에 account 와 account sales area 데이터를 구분하기 위한 필드, A : Account, S : Account Sales Area</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>