force-app/main/default/objects/MDGAccount__c/fields/URI_ADDR__c.field-meta.xml
<CustomField>
    <fullName>URI_ADDR__c</fullName>
    <label>URI_ADDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>