force-app/main/default/objects/MDGAccount__c/fields/VKBUR__c.field-meta.xml
<CustomField>
    <fullName>VKBUR__c</fullName>
    <label>VKBUR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>