force-app/main/default/objects/MDGAccount__c/fields/VSBED__c.field-meta.xml
<CustomField>
    <fullName>VSBED__c</fullName>
    <label>VSBED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>