force-app/main/default/objects/MDGAccount__c/fields/WAERS__c.field-meta.xml
<CustomField>
    <fullName>WAERS__c</fullName>
    <label>WAERS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>