force-app/main/default/objects/MDGAccount__c/fields/ZTERM__c.field-meta.xml
<CustomField>
    <fullName>ZTERM__c</fullName>
    <label>ZTERM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>