force-app/main/default/objects/MDGAccount__c/fields/ZZCHPAT__c.field-meta.xml
<CustomField>
    <fullName>ZZCHPAT__c</fullName>
    <description>New field 240425</description>
    <label>ZZCHPAT</label>
    <length>1</length>
    <type>Text</type>
</CustomField>