force-app/main/default/objects/MDGAccount__c/fields/ZZCREDL_C__c.field-meta.xml
<CustomField>
    <fullName>ZZCREDL_C__c</fullName>
    <label>ZZCREDL_C</label>
    <length>3</length>
    <type>Text</type>
</CustomField>