force-app/main/default/objects/MDGAccount__c/fields/ZZJ_1KFRE__c.field-meta.xml
<CustomField>
    <fullName>ZZJ_1KFRE__c</fullName>
    <label>ZZJ_1KFRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>