force-app/main/default/objects/MDGAccount__c/fields/ZZKDGRP_C__c.field-meta.xml
<CustomField>
    <fullName>ZZKDGRP_C__c</fullName>
    <label>ZZKDGRP_C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>