force-app/main/default/objects/MDGAccount__c/fields/ZZNSTKUNL1__c.field-meta.xml
<CustomField>
    <fullName>ZZNSTKUNL1__c</fullName>
    <label>ZZNSTKUNL1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>