force-app/main/default/objects/MDGAccount__c/fields/ZZNSTKUNL2__c.field-meta.xml
<CustomField>
    <fullName>ZZNSTKUNL2__c</fullName>
    <label>ZZNSTKUNL2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>