force-app/main/default/objects/MDGAccount__c/fields/ZZNSTKUNL2_T__c.field-meta.xml
<CustomField>
    <fullName>ZZNSTKUNL2_T__c</fullName>
    <label>ZZNSTKUNL2_T</label>
    <length>255</length>
    <type>Text</type>
</CustomField>