force-app/main/default/objects/MDGAccount__c/fields/ZZNSTKUNL3__c.field-meta.xml
<CustomField>
    <fullName>ZZNSTKUNL3__c</fullName>
    <label>ZZNSTKUNL3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>