force-app/main/default/objects/MDGAccount__c/fields/ZZSHIPPER__c.field-meta.xml
<CustomField>
    <fullName>ZZSHIPPER__c</fullName>
    <label>ZZSHIPPER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>