force-app/main/default/objects/MDGAccount__c/fields/ZZTOBUSL1__c.field-meta.xml
<CustomField>
    <fullName>ZZTOBUSL1__c</fullName>
    <label>ZZTOBUSL1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>