force-app/main/default/objects/MDGAccount__c/fields/ZZTOBUSL1_EN__c.field-meta.xml
<CustomField>
    <fullName>ZZTOBUSL1_EN__c</fullName>
    <label>ZZTOBUSL1_EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>