force-app/main/default/objects/MDGAccount__c/fields/ZZTOBUSL1_KO__c.field-meta.xml
<CustomField>
    <fullName>ZZTOBUSL1_KO__c</fullName>
    <label>ZZTOBUSL1_KO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>