force-app/main/default/objects/MDGAccount__c/fields/ZZTOBUSL2__c.field-meta.xml
<CustomField>
    <fullName>ZZTOBUSL2__c</fullName>
    <label>ZZTOBUSL2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>