force-app/main/default/objects/MDGAccount__c/fields/ZZTOBUSL2_KO__c.field-meta.xml
<CustomField>
    <fullName>ZZTOBUSL2_KO__c</fullName>
    <label>ZZTOBUSL2_KO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>